--- a/app/views/videos/edit.html.erb
+++ b/app/views/videos/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Video</h1>
-
-<%= render 'form', video: @video %>
-
-<%= link_to 'Show', @video %> |
-<%= link_to 'Back', videos_path %>
+<div class="wrapper">
+    <div class="container">
+        <h3 class="header center teal-text text-lighten-2"><%= Video.model_name.human %></h3>
+    </div>
+</div>
+<div class="container">
+    <%= render 'form', video: @video %>
+</div>    
