--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -22,14 +22,18 @@
             </div>
             <div class="card-stacked">
               <div class="card-content">
-                <p class="hide-on-large-only"><%= produto.modelo %></p>
+                <h5 class="header teal-text text-lighten-2"><%= produto.modelo %></h5>
                 <p class="hide-on-small-only"><%= produto.resumo %></p>
               </div>
               <div class="card-action">
                 <%= link_to t('visualizar'), produto %>
                 <% if usuario_signed_in? %>
-                  <%= link_to t('editar'), edit_produto_path(produto) %>
-                  <%= link_to t('deletar'), produto, method: :delete, data: { confirm: 'Deseja apagar ?' } %>
+                  <%= link_to edit_produto_path(produto), class: "btn-floating" do %>
+                    <i class="material-icons">edit</i>
+                  <%end%>
+                  <%= link_to produto, method: :delete, data: { confirm: 'Deseja apagar ?' }, class: "btn-floating red" do%>
+                    <i class="material-icons">delete</i>
+                  <%end%>
                 <%end%> 
               </div>
             </div>
