--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="input-field col s12">
         <%= form.submit class: "waves-effect waves-light btn" %>
-        <%= link_to t('cancelar'), artigos_path, class: "waves-effect waves-light btn" %>
+        <%= link_to t('cancelar'), videos_path, class: "waves-effect waves-light btn" %>
       </div>  
     </div>
 <% end %>
