--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,6 +17,13 @@
   padding-top: 100px;
   padding-bottom: 100px;
   margin-bottom: -20px;
+  background: #ffffff;
+}
+.home-01{
+  padding-top: 100px;
+  padding-bottom: 100px;
+  margin-bottom: -20px;
+  color: #ffffff;
 }
 .home-2{
   padding-top: 30px;
