--- a/app/views/paginas/index.html.erb
+++ b/app/views/paginas/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>id</th>
       <th>Titulo</th>
       <th>Texto</th>
       <th colspan="3"></th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @paginas.each do |pagina| %>
       <tr>
+        <td><%= pagina.id %></td>
         <td><%= pagina.titulo %></td>
         <td><%= pagina.texto %></td>
         <td><%= link_to 'Show', pagina %></td>
