--- a/app/views/banners/index.html.erb
+++ b/app/views/banners/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>id</th>
       <th>Titulo</th>
       <th>Descricao</th>
       <th colspan="3"></th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @banners.each do |banner| %>
       <tr>
+        <td><%= banner.id %></td>
         <td><%= banner.titulo %></td>
         <td><%= banner.descricao %></td>
         <td><%= link_to 'Show', banner %></td>
