--- a/app/views/banners/new.html.erb
+++ b/app/views/banners/new.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
         <div class="container">
-            <h3 class="header center teal-text text-lighten-2"><%= Banner.model_name.human %></h3>
+            <h3 class="header center teal-text text-lighten-2">Editar</h3>
         </div>
     </div>
     <div class="container">
