--- a/app/views/quem_somos/new.html.erb
+++ b/app/views/quem_somos/new.html.erb
@@ -4,5 +4,5 @@
         </div>
     </div>
     <div class="container">
-        <%= render 'form', banner: @banner %>
+        <%= render 'form', quem_somo: @quem_somo %>
     </div>    
