--- a/app/views/ajudas/index.html.erb
+++ b/app/views/ajudas/index.html.erb
@@ -18,6 +18,8 @@
     <ul class="tabs">
       <li class="tab col s3"><a class="active" href="#test1">Perguntas e respostas</a></li>
       <li class="tab col s3"><a class="active" href="#test2">Assistência técnica</a></li>
+      <li class="tab col s3"><a class="active" href="#test3">Solicitar manutenção</a></li>
+      
     </ul>
   
     <div id="test1" class="col s12">
@@ -71,5 +73,8 @@
           
             <% end %>
       
+    </div>
+    <div id="test3" class="col s12">
+        <%= render 'manutencoes/form', manutencao: @manutencao %>
     </div>
 </div>
