--- a/app/views/quem_somos/show.html.erb
+++ b/app/views/quem_somos/show.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="container">
-        <h3 class="header center teal-text text-lighten-2"><%= t('quem_somos')%></h3>
+        <h3 class="header center teal-text text-lighten-2"><%= @quem_somo.titulo %></h3>
     </div>
   </div>
               
