--- a/app/views/bemvindo/index.html.erb
+++ b/app/views/bemvindo/index.html.erb
@@ -9,7 +9,7 @@
     });
 </script>
 <div class="home">
-    <%= video_tag  "video.mov", id: "video", :autoplay => true, :loop => true%>
+    <%= video_tag  "video.mp4", id: "video", :autoplay => true, :loop => true%>
     <div class="container">
 
         <div class="row welcome center-align">
