--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
             <br><br>
         </div>
     </div>
-    <%= video_tag  "video.mov", id: "video", :autoplay => true, :loop => true%>
+    <%= video_tag  "video.mp4", id: "video", :autoplay => true, :loop => true%>
 </div>
 
 <div class="home-1">
