--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="parallax-container parallax-container-two valign-wrapper">
+<div class="parallax-container parallax-container-one valign-wrapper">
 <div class="section no-pad-bot">
     <div class="container">
         <br><br>
