--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -25,6 +25,11 @@
   margin-bottom: -20px;
   color: #ffffff;
 }
+.home-001{
+  padding-top: 100px;
+  padding-bottom: 100px;
+  margin-bottom: -20px;
+}
 .home-2{
   padding-top: 30px;
   padding-bottom: 30px;
