--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -116,7 +116,7 @@
                    
                     <h1 class="header center teal-text text-lighten-2"><%= @backgound_3.titulo %></h1>
                     <div class="row center">
-                        <h5 class="header col s12 darken-1"><%= raw(@backgound_3.descricao) %></h5>
+                        <h5 class="header col s12 light"><%= raw(@backgound_3.descricao) %></h5>
                     </div>
                    
                     <%= image_tag @backgound_3.img.url , class:"responsive-img"%>
