--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -25,9 +25,9 @@
     </div>
 </div>
 <div class="footer-copyright">
-    <div class="container">
-        <%= link_to_unless_current (image_tag  "br.png"), locale: "pt" %>
-        <%= link_to_unless_current (image_tag  "United-States.png"), locale: "en" %>
+    <div class="container translate">
+        <%= link_to_unless_current (image_tag  "pt.png"), locale: "pt" %>
+        <%= link_to_unless_current (image_tag  "en.png"), locale: "en" %>
         <%= link_to_unless_current (image_tag  "es.png"), locale: "es" %>
     </div>
 </div>
