--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -61,3 +61,9 @@ footer.footer-copyright li{
 footer.footer-copyright{
   color: #CCC;
 }
+#tabela{
+  border: 1px solid #ccc;
+}
+#tabela td{
+  border: 1px solid #ccc;
+}
