--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
 
 <div class="home-1">
     <div class="row center">
-        <h3 class="header center teal-text text-lighten-2">Linhas de produtos</h3>
+        <h3 class="header center teal-text text-lighten-2"><%= t('linha') %></h3>
     </div>
     <div class="row">
         <% @categorias.each do |categoria| %>
