--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
         <br><br>
     </div>
 </div>
-<div class="parallax"><%= image_tag @backgound_1.img.url %></div>
+<div class="parallax"><%= image_tag @backgound_1.img.url , class:"responsive-img"%></div>
 </div>
 
 <div class="home-1">
