--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -15,7 +15,7 @@
         </div>    
       <% end %>
      
-        <% for produto in Produto.where('categoria_id = ?', categoria.id).order(modelo: :desc) %>
+        <% for produto in Produto.where('categoria_id = ?', categoria.id).order(modelo: :asc) %>
           <div class="card horizontal hoverable">
             <div class="card-image">
               <%= link_to (image_tag produto.foto.url(:lista)), produto, class: "responsive-img" %>
